tests/parser-test-files/bad-files/parse-if.3.error
error: Malformed if expression
  --> test:4:18
   |
 4 |  (define x (if 1 2))
   |                   ^ expected a form
